k3s/ingress.yaml
#
# FIXME:  does not  work with  vanilla  install! You  either want  SSL
# Pass-Through  to the  port 443  of the  svc/argocd-server or  supply
# --insecure to  the argocd-server deployment. Without  --insecure one
# gets a  redirect to https://  site, the  browser ends up  asking the
# Traefik Ingress again which proxies to  http:// at port 80 again ---
# an endless loop. See
#
#     ./enable-insecure-http-at-port-80.diff
#
# which  will  need to  be  re-applied  after  eacht update  from  the
# upstream ...
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  labels:
    app: argocd
spec:
  rules:
  - host: "argocd.localhost"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          # With Traefik you want plain old http on the backend:
          service:
            name: argocd-server
            port:
              number: 80
